- bios/detect.S: functions now keep register a2 intact (LVL)
- bios/kprint.c: temporarily removed console print in panic, until one
  knows of a way to be certain that the concole is configured (LVL)
- collected a number of <string.h> routines scattered around and put 
  them in util/string.c and include/string.h; merged btools.h with
  string.h to be consistent with standard ANSI C (LVL)
- bios/kprint.h: silly debug macro HERE kprintf()s the location in file (LVL)
- bios/bios.c: commented out VEC_ILLEGAL = brkpt; (LVL)
- transferred getmpb from bios.c to biosmem.c (LVL)
- bios/conout.S: fixed bconout5(c) bug when c >= 128 (LVL)
- removed obsolete bios/keyboard.h include/btools.h (LVL)
- in bios/vectors.S, init_user_vec no longer relies on the previous value of 
  register a1 from init_exc_vec (LVL)
- bios/blkdev.c - the floppy_init does not use the hdv_init vector. A: works
  under STonX again. (joy)
- bios/bios.c - increased the fixed size sector cache to 4kB sector. That's
  enough for partitions smaller than 512MB. Ideally it should be 32kB (joy).

16. Jan. 2002
- aes and vdi not exported in make tgz (LVL)
- bios/clock.c: enabled MegaRTC clock by commenting out validity test (LVL)
- bios/clock.c: removed old commented-out code (LVL)
- removed unused bdos/bdos.h (LVL)
- bdos/proc.c: setjmp warnings avoided by turning params into static vars (LVL)
- updated doc/install.txt (LVL)
- removed [ OK ] in initinfo, expanded abbreviated messages, and modified
  fr.po and de.po (LVL)
- bios/floppy.c: some untested unique FDC track register bookkeeping (LVL)
- made ramtop and ramvalid visible from C code (LVL)

19. Jan. 2002
- experimental autodetect ARAnyM or STonX native print (activated in 
  bios/config.h) (LVL)
- new setjmp/longjmp replacing older ones (LVL)
- updated todo list (LVL)
- started fastram support in bdos (LVL)
- fixed some functino prototypes in bios.c (LVL)
- removed cli/Makefile (LVL)