@@ -44,7 +44,7 @@ struct font_head f6x6 ={
     192,                /*   UWORD form_width   */
     6,                  /*   UWORD form_height  */
 
-    0,                  /*   UWORD next_font    */
+    0,              /*   UWORD next_font    */
     0                   /*   UWORD next_seg     */
 };
 
